--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@animxyz/vue": "^0.6.6",
+    "particles.js": "^2.0.0",
+    "particles.vue": "^3.1.0",
+    "ts-loader": "^8.2.0",
+    "tsparticles-engine": "^2.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
